# agave-scheduler

./: .gitignore  .gitmodules  Cargo.toml  README.md  events.json  flake.nix  taplo.toml
.github/workflows/actions/rust-toolchain/: action.yml
crates/bridge/: Cargo.toml
crates/bridge/src/: bindings.rs  lib.rs  spec.rs  test.rs
crates/external-scheduler/: Cargo.toml
crates/external-scheduler/src/: args.rs  config.rs  control_thread.rs  events_thread.rs  main.rs  scheduler_thread.rs  schedulers.rs
crates/ferrari/: Cargo.toml
crates/ferrari/src/: lib.rs
crates/fifo/: Cargo.toml
crates/fifo/src/: lib.rs
crates/greedy/: Cargo.toml
crates/greedy-external/: Cargo.toml
crates/greedy-external/src/: args.rs  control_thread.rs  main.rs  scheduler_thread.rs
crates/greedy/src/: lib.rs  transaction_map.rs
crates/jito-protos/: Cargo.toml
crates/scheduler-batch/: Cargo.toml
crates/scheduler-batch/src/: scheduler.rs
crates/scheduler-fifo/: Cargo.toml
crates/scheduler-fifo/src/: lib.rs
crates/scheduler-greedy/: Cargo.toml
crates/scheduler-greedy-revenue/: Cargo.toml
crates/scheduler-greedy-revenue/src/: lib.rs
crates/scheduler-greedy-throughput/: Cargo.toml
crates/scheduler-greedy-throughput/src/: lib.rs
crates/schedulers/: Cargo.toml
crates/schedulers/src/: batch.rs  fifo.rs  greedy.rs  lib.rs  shared.rs
crates/schedulers/src/batch/: jito_thread.rs  mod.rs  scheduler.rs  tip_program.rs
crates/schedulers/src/events/: emitter.rs  model.rs
etc/: batch.toml  batch.yaml  config.toml  config.yaml
grafana/: ferrari.json
