[package]
name = "bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
agave-feature-set = { workspace = true, features = ["agave-unstable-api"] }
agave-scheduler-bindings = { workspace = true, features = ["dev-context-only-utils"] }
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
rts-alloc.workspace = true
shaq.workspace = true
slotmap.workspace = true
solana-fee = { workspace = true, features = ["agave-unstable-api"] }

[dev-dependencies]
bincode.workspace = true
solana-compute-budget-interface.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-system-transaction.workspace = true
solana-transaction = { workspace = true, features = ["bincode", "serde"] }
