[package]
name = "agave-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
testing = ["dep:bincode", "dep:solana-transaction"]

[dependencies]
agave-feature-set = { workspace = true, features = ["agave-unstable-api"] }
agave-scheduler-bindings = { workspace = true, features = ["dev-context-only-utils"] }
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
agave-transaction-view.workspace = true
bincode = { workspace = true, optional = true }
rts-alloc.workspace = true
shaq.workspace = true
slotmap.workspace = true
solana-fee = { workspace = true, features = ["agave-unstable-api"] }
solana-pubkey.workspace = true
solana-transaction = { workspace = true, optional = true }

[dev-dependencies]
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api", "dev-context-only-utils"] }
