[package]
name = "agave-external-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
agave-bridge.workspace = true
agave-schedulers = { workspace = true, features = ["batch"] }
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
futures = { workspace = true, features = ["alloc"] }
metrics-nats-exporter.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
solana-keypair.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
toolbox = { workspace = true, features = ["named_task", "shutdown", "tracing", "version"] }
tracing.workspace = true
