[package]
name = "greedy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
agave-scheduler-bindings = { workspace = true, features = ["dev-context-only-utils"] }
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
rts-alloc.workspace = true
shaq.workspace = true

[dev-dependencies]
bincode = "1.3.3"
solana-transaction = { workspace = true, features = ["serde"] }
