[package]
name = "jito-protos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"]

[lints]
workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
