[package]
name = "agave-scheduler-greedy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
agave-bridge.workspace = true
agave-scheduler-bindings = { workspace = true, features = ["dev-context-only-utils"] }
agave-schedulers.workspace = true
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
agave-transaction-view.workspace = true
arrayref = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
borsh = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
crossbeam-channel = { workspace = true, optional = true }
eyre = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
hashbrown.workspace = true
indexmap.workspace = true
jito-protos = { workspace = true, optional = true }
metrics.workspace = true
min-max-heap.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_with.workspace = true
solana-clock.workspace = true
solana-compute-budget-instruction = { workspace = true, features = ["agave-unstable-api"] }
solana-cost-model = { workspace = true, features = ["agave-unstable-api"] }
solana-fee = { workspace = true, features = ["agave-unstable-api"] }
solana-fee-structure.workspace = true
solana-hash = { workspace = true, optional = true }
solana-keypair = { workspace = true, optional = true }
solana-message = { workspace = true, optional = true }
solana-packet = { workspace = true, optional = true }
solana-pubkey.workspace = true
solana-pubsub-client = { workspace = true, optional = true }
solana-rpc-client = { workspace = true, optional = true }
solana-rpc-client-types = { workspace = true, optional = true }
solana-runtime-transaction = { workspace = true, features = ["agave-unstable-api"] }
solana-sdk-ids = { workspace = true, optional = true }
solana-signature.workspace = true
solana-svm-transaction.workspace = true
solana-transaction.workspace = true
static_assertions.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio.workspace = true
tonic = { workspace = true, optional = true, features = ["tls", "tls-roots"] }
toolbox = { workspace = true, optional = true, features = ["interval_stream", "shutdown"] }
tracing = { workspace = true, optional = true }

[dev-dependencies]
solana-compute-budget-interface.workspace = true
