[package]
name = "agave-schedulers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
batch = [
  "dep:crossbeam-channel",
  "dep:eyre",
  "dep:jito-protos",
  "dep:solana-keypair",
  "dep:solana-packet",
  "dep:tokio",
  "dep:tonic",
  "dep:tracing",
]

[dependencies]
agave-bridge.workspace = true
agave-scheduler-bindings = { workspace = true, features = ["dev-context-only-utils"] }
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
agave-transaction-view.workspace = true
chrono = { workspace = true, features = ["serde"] }
crossbeam-channel = { workspace = true, optional = true }
eyre = { workspace = true, optional = true }
hashbrown.workspace = true
jito-protos = { workspace = true, optional = true }
metrics.workspace = true
min-max-heap.workspace = true
serde = { workspace = true, features = ["derive"] }
solana-clock.workspace = true
solana-compute-budget-instruction = { workspace = true, features = ["agave-unstable-api"] }
solana-cost-model = { workspace = true, features = ["agave-unstable-api"] }
solana-fee = { workspace = true, features = ["agave-unstable-api"] }
solana-fee-structure.workspace = true
solana-keypair = { workspace = true, optional = true }
solana-packet = { workspace = true, optional = true }
solana-pubkey.workspace = true
solana-runtime-transaction = { workspace = true, features = ["agave-unstable-api"] }
solana-svm-transaction.workspace = true
solana-transaction.workspace = true
static_assertions.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, optional = true }
tonic = { workspace = true, optional = true, features = ["tls", "tls-roots"] }
tracing = { workspace = true, optional = true }

[dev-dependencies]
agave-bridge = { workspace = true, features = ["testing"] }
bincode.workspace = true
expect-test.workspace = true
serde_json.workspace = true
solana-compute-budget-interface.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-system-transaction.workspace = true
solana-transaction = { workspace = true, features = ["bincode", "serde"] }
